# atlas-core

./: pyproject.toml
atlas_core/: README.md  __init__.py  pyproject.toml
atlas_core/cli/: __init__.py  __main__.py
atlas_core/domain/: __init__.py  bid_package_review.py  building.py  drawing.py  equipment.py  estimate_baseline.py  integrated_system.py  invoice.py  manufacturer.py  models.py  project.py  project_lifecycle.py  purchase_order.py  room.py  scene.py  space.py  specification.py  vendor.py  vendor_relationship.py
atlas_core/parsers/: __init__.py  text.py
atlas_core/registry/: __init__.py  manufacturer_registry.py  vendor_registry.py
atlas_core/rules/: __init__.py  resolver.py
atlas_core/sample_data/: __init__.py  manufacturer_seed.py  maw_seed.py  vendor_seed.py
atlas_core/services/: __init__.py  baseline_service.py  bid_package_review_service.py  cross_reference_service.py  csv_export_service.py  document_classifier_service.py  drawing_indexer_service.py  equipment_detection_service.py  equipment_matrix_service.py  estimate_workflow_service.py  estimator_brief_service.py  estimator_risk_service.py  example.py  manufacturer_review_service.py  markdown_export_service.py  plan_review_export_service.py  plan_review_workflow_service.py  resolution_service.py  review_report_service.py  scope_gap_service.py  specification_indexer_service.py  system_detection_service.py
atlas_core/utils/: __init__.py  validation.py
tests/: test_baseline_service.py  test_bid_package_review.py  test_bid_package_review_service.py  test_building.py  test_cli.py  (+39 more)
