[project]
name = "atlas-core"
version = "0.1.0"
description = "Atlas Core is a lightweight project scaffold for domain, parser, service, and CLI components."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Atlas Core" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/jsherbanee/atlas-core"

[project.scripts]
atlas-core = "atlas_core.cli:main"
